# pants-fun

./: README.md  pants.toml
projects/autobahn/: pyproject.toml
projects/autobahn/autobahn/: main.py
projects/autobahn/src/autobahn/: finder.py  main.py
projects/autobahn/tests/: test_finder.py  test_main.py
projects/ddd/: pyproject.toml
projects/ddd/src/ddd/: entrypoint.py
projects/ddd/tests/: test_entrypoint.py
projects/myproject/: pyproject.toml
projects/myproject/myproject/: main.py
projects/myproject/tests/: test_main.py
projects/mysrc/: pyproject.toml
projects/mysrc/src/mysrc/: run.py
projects/mysrc/tests/: test_run.py
